# log_analyzer_with_llms_and_sql

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: server.py  streamlit_frontend.py
app/api/: hf_embedding.py  mysql.py
app/api/langchain_custom/: llms.py  stream_document_loader.py  text2sql.py
app/api/log_format/: log_parser.py
app/core/: config.py  setup.py
app/models/: logging.py  model.py
app/routes/: qa.py  sql.py  summarize.py  upsert.py
app/static/sql/: init.sql
app/utils/: __init__.py  chunking.py  common.py
log_analyzer_with_llms_and_sql/: server.py
log_analyzer_with_llms_and_sql/models/: model.py
log_analyzer_with_llms_and_sql/routes/: qa.py  upsert.py
log_analyzer_with_llms_and_sql/static/sql/: init.sql
scripts/: build_docker.sh  poetry_to_pip_req.py  run_docker.sh
tests/: conftest.py  requirements.txt
tests/api/: test_langchain_custom.py  test_log_format_api.py  test_mysql_api.py
tests/api/test_langchain_custom/: test_stream_document_loader.py  test_text2sql.py
tests/routes/: test_server.py  test_sql_route.py  test_summarize_route.py  test_upsert_route.py
