[project]
name = "app"
version = "0.1.0"
description = "Log analysis with LLMs, MySQL, and a fastapi+uvicorn backend"
authors = [
    {name = "SamSamhuns",email = "samhunsadamant@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "aiofiles (==24.1.0)",
    "beautifulsoup4 (==4.12.3)",
    "chromadb (==0.5.3)",
    "fastapi (==0.112.2)",
    "langchain (==0.2.17)",
    "langchain-chroma (==0.1.3)",
    "langchain-community (==0.2.19)",
    "langchain-openai (==0.1.22)",
    "langchainhub (==0.1.21)",
    "pypdf (>=4.3.1)",
    "python-multipart (==0.0.18)",
    "pymysql (==1.1.1)",
    "requests (==2.32.3)",
    "tiktoken (==0.7.0)",
    "uvicorn (==0.30.6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
coverage = "^7.10.6"
pytest = "^8.4.2"
pytest-asyncio = "^1.1.0"
pytest-timeout = "^2.4.0"
pytest-mock = "^3.15.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.12"

