[project]
name = "app"
version = "0.1.0"
description = "Log analysis with LLMs, MySQL, and a fastapi+uvicorn backend"
authors = [
    {name = "SamSamhuns",email = "samhunsadamant@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "aiofiles>=24.1.0,<25.0.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "chromadb>=0.5.3,<2.0.0",
    "fastapi>=0.112.2,<1.0.0",
    "langchain (>=0.3.8,<0.4.0)",
    "langchain-chroma (>=0.2.5,<0.3.0)",
    "langchain-community (<0.4.1)",
    "langchain-openai (>=0.3.32,<0.4.0)",
    "langchain-text-splitters (<1.0.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "pypdf>=6.1.3,<7.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "python-multipart>=0.0.22,<1.0.0",
    "pymysql>=1.1.1,<2.0.0",
    "requests>=2.32.4,<3.0.0",
    "tiktoken>=0.7.0,<1.0.0",
    "uvicorn>=0.30.6,<1.0.0",
    "langchain-huggingface (>=0.1.0,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
coverage = "^7.10.6"
pytest = "^8.4.2"
pytest-asyncio = "^1.1.0"
pytest-timeout = "^2.4.0"
pytest-mock = "^3.15.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.12"

[tool.pytest.ini_options]
markers = [
    "order: marker used to control test execution order",
]

[tool.ruff]
line-length = 120
